--- a/01 - JavaScript Drum Kit/index-START.html
+++ b/01 - JavaScript Drum Kit/index-START.html
@@ -58,7 +58,14 @@
   <audio data-key="76" src="sounds/tink.wav"></audio>
 
 <script>
-
+  // TODO: Cut off openhat when hihat is pressed. (Cut 70's audio when 83 is pressed.)
+  function doTheDrumPlz(keyCode) {
+      const audio = document.querySelector(`audio[data-key="${keyCode}"]`)
+      if (!audio) return
+      audio.currentTime = 0;
+      audio.play()
+  }
+  window.addEventListener('keydown', (e) => doTheDrumPlz(e.keyCode))
 </script>
 
 
